# py-practice

./: .env.example  .gitignore  README.md  alembic.ini  complex_test_workflow.json  config.py  main.py  node_handlers.py  pyproject.toml  schemas.py  tasks.py  test_all_nodes_workflow.json  test_data.json  test_full_workflow.json  workflow_engine.py
alembic/: env.py
alembic/versions/: 1309f2c716b6_add_execution_node_model.py  29786148c766_add_output_index.py  6289c01972eb_add_execution_model.py  6c7bf4981965_rename_node_id_to_node_name.py  7e2037e10b22_add_ondelete_cascade_to_executionnode.py  b02eb9268d85_initial_schema.py  b7c960ee7f28_add_execution_and_execution_node_tables.py
app/: __init__.py  credential_loader.py  db.py  main.py  node_handlers.py  tasks.py  workflow_engine.py  workflow_executor.py  workflow_graph.py
app/api/: deps.py
app/api/routes/: auth.py  credentials.py  workflows.py
app/core/: auth.py  config.py  security.py
app/models/: __init__.py  credentials.py  execution.py  execution_node.py  users.py  workflow.py
app/schemas/: credentials.py  execution.py  nodes.py  users.py  workflow.py
app/services/: __init__.py  cipher.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: CredentialsModal.tsx  ImportWorkflowModal.tsx
frontend/src/config/: nodeDefinitions.ts
frontend/src/lib/: api.ts  validateWorkflow.ts
frontend/src/pages/: CanvasPage.tsx  CredentialsPage.tsx  DashboardPage.tsx  ExecutionsPage.tsx  LoginPage.tsx  (+1 more)
(+11 files in other folders)
